Many items have their description now on one line instead of multiple lines.


	Story

Addon is only accessible in chapter 3. Xardas will give the addon introduction after returning from the Valley of Mines. Vatras will not give the letter for Saturas before this. Likewise, Lares will not mention Vatras if joining the ring before receiving the addon introduction from Xardas.


	Quests

"Cavalorn's old hut" only begins once NH finds the bag of ore, since before that the NH does not really have a task that he knows about.
"Finding Joe" no longer has its own logged quest, since for all NH knows, he is just another missing person.
"I gotta get out of here!" requires Talbin to be escorted through the pass and he doesn't spawn on Bengars farm right away.
"Merchant raid" requires finding the bandits who took Erol's stone tablets, before returning any stone tablets.
"Quest for Lucia" is now just about delivering her note to Elvrich, after that she is just another missing person.
"The Claw of Beliar" requires talking to Saturas before praying to Beliar and the option to destroy is only presented once then.
"The Seekers" can be finished by bringing all of the Almanacs to Pyrokar before leaving for Irdorath.


	Monster

Young Wolves at the pass are now regular Wolves.


	NPCs General

Added ambient inventory for most NPCs alive or dead.
Added logging for pickpocket failures and successes.
Added pickpocketable items to NPCs inventories, except for traders.

Changed NPCs that are considered "tough" to ignore ranged weapons as well as melee.
Changed NPCs that are fleeing to ignore trespassing and not to engage in dialog while fleeing.
Changed NPCs that are thieves or complicit to ignore theft for Attila, Cassia, Halvor, Jesper, Kardif, Moe, Nagur, Ramirez, Rengaru, Sarah.
Changed NPCs to attack to kill for Girion, Parcival, Sylvio.
Changed NPCs to engage in small talk 50% less frequently.